--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Bohdan-Voznik.github.io/goit-react-hw-05-movies/",
   "dependencies": {
     "-": "0.0.1",
     "@emotion/react": "^11.8.2",
